Add pesto picture to pesto HTML page

--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -9,6 +9,8 @@
 
 <body>
     <h1>Proper Pesto</h1>
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4517170.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
+        alt="green pesto in a white marble pestle on a red and white tablecloth" height="200">
 </body>
 
 </html>
