--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -28,6 +28,7 @@
         <li>2 ounces finely grated Parmigiano-Reggiano cheese</li>
         <li>1/2 cup mild extra-virgin olive oil</li>
     </ul>
+    <h2>Steps</h2>
     <ol>
         <li>Crush garlic and pinch of kosher salt in a mortar with the pestle until garlic is mashed and paste-like (1
             or 2 minutes).</li>
