Add pate and tom kha recipe links to index page

--- a/index.html
+++ b/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Recipe Index</title>
 </head>
 
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/pesto.html">Proper Pesto</a>
+    <ul>
+        <li><a href="./recipes/pesto.html">Proper Pesto</a></li>
+        <li><a href="./recipes/tomkhagai.html">Tom Kha Gai</a></li>
+        <li><a href="./recipes/pate.html">Pâté</a></li>
+    </ul>
 </body>
 
 </html>
