Fix typo in recipe description

--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -12,8 +12,10 @@
     <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F4517170.jpg&q=60&c=sc&poi=auto&orient=true&h=512"
         alt="green pesto in a white marble pestle on a red and white tablecloth" height="400">
     <h2>Description</h2>
-    <p><a href="https://www.allrecipes.com/author/chef-john/">Chef John Mitzewich</a> once again shows us why there are
-        professional chefs, and the rest of the us. This pesto is a
+    <p><a href="https://www.allrecipes.com/author/chef-john/" target="_blank" rel="noreferrer">Chef John
+            Mitzewich</a>
+        </a> once again shows us why there are
+        professional chefs, and the rest of us. This pesto is a
         delight for the senses, and the extradorinary tastes (yes, plural, it is a party) come paired with a sense of
         satisfaction having made this
         beautiful dish without any electricity except whatever exists in your own person.</p>
@@ -50,7 +52,7 @@
     </ul>
     <h2>Recipe Credit</h2>
     <p>Though this recipe has not been modifiied, the original recipe posting can be found <a
-            href="https://www.allrecipes.com/recipe/258213/proper-pesto/">here</a>.</p>
+            href="https://www.allrecipes.com/recipe/258213/proper-pesto/" target="_blank" rel="noreferrer">here</a>.</p>
 </body>
 
 </html>
