Improve clunky sentence in recipe description

--- a/recipes/pesto.html
+++ b/recipes/pesto.html
@@ -18,7 +18,7 @@
         professional chefs, and the rest of us. This pesto is a
         delight for the senses, and the extradorinary tastes (yes, plural, it is a party) come paired with a sense of
         satisfaction having made this
-        beautiful dish without any electricity except whatever exists in your own person.</p>
+        beautiful dish the old fashioned way (i.e., no food processor).</p>
     <p>If you're throwing a dinner party, guests can take turns at the pestle and mortar which invites everyone to feel
         a sense of accomplishment from having played a part in bringing this culinary delight to fruition.</p>
     <h2>Ingredients</h2>
