Fix typos in tom kha gai recipe description

--- a/recipes/tomkhagai.html
+++ b/recipes/tomkhagai.html
@@ -10,7 +10,8 @@
 <body>
     <h1>Tom Kha Gai</h1>
     <p>(translated: <a
-            href="https://masimasa.com/blogs/thai/tom-kha#:~:text=The%20literal%20translation%20in%20Thai,Thai%20menu%20in%20the%20US.">boiling,
+            href="https://masimasa.com/blogs/thai/tom-kha#:~:text=The%20literal%20translation%20in%20Thai,Thai%20menu%20in%20the%20US."
+            target="_blank" rel="noreferrer">boiling,
             galangal chicken</a>).</p>
     <img src="../img/tomkhagai.jpg" alt="green pesto in a white marble pestle on a red and white tablecloth"
         height="400">
@@ -18,11 +19,11 @@
     <p>What's galangal? It's part of what makes this soup like no other soup you've had, unless you've had Tom Yum,
         which is similar but lacks the creamy coconutty goodness. This soup is the soup by which I judge Thai or Lao
         restaurants. When you get the flavors right in this soup, it's a celebration of all the taste profiles (except
-        bitter): sweet, savory, sour, umami, and home all wrapped up into this tasty, creamy, bright, feels-like-a-hug
+        bitter): sweet, savory, sour, and umami all wrapped up into this tasty, creamy, bright, feels-like-a-hug
         soup.</p>
     <p>I stick to this recipe the least of any recipe I use, because the final flavor depends on the punchiness of the
         ingredients you use. I enjoy experimenting with
-        this, because the payoff is unmathced when you get it just right.</p>
+        this, because the payoff is unmatched when you get it just right.</p>
     <h2>Ingredients</h2>
     <ul>
         <li>1 tablespoon coconut oil</li>
@@ -70,7 +71,8 @@
     </ul>
     <h2>Recipe Credit</h2>
     <p>Though this recipe has not been modifiied, the original recipe posting can be found <a
-            href="https://40aprons.com/tom-kha-soup-whole30/#wprm-recipe-container-15842">here</a>.</p>
+            href="https://40aprons.com/tom-kha-soup-whole30/#wprm-recipe-container-15842" target="_blank"
+            rel="noreferrer">here</a>.</p>
 </body>
 
 </html>
