--- a/recipes/pate.html
+++ b/recipes/pate.html
@@ -13,16 +13,19 @@
     <h2>Description</h2>
     <p>After some failed experiments, my husband is convinced that the benefits of adding beef liver to our regular home
         menu finally outweigh the cons. Why? Because of this recipe by <a
-            href="https://creativeinmykitchen.com/about-me/">Claudia Curici</a> which creates a
+            href="https://creativeinmykitchen.com/about-me/" target="_blank" rel="noreferrer">Claudia Curici</a> which
+        creates a
         delicious flavor <em>and</em> a pleasing texture--a feat difficult to achieve with offal.</p>
     <p>While this pâté is tasty on baguettes and crackers of all shapes and sizes, we've also found that using this
         as a condiment on burgers and sandwiches is also quite the treat.</p>
-    <p>Still not convinced to eat a cow organ? If you're like me, and your heads needs convincing before your stomach
+    <p>Still not convinced to eat a cow organ? If you're like me, and your head needs convincing before your stomach
         will follow, feel free to read these
-        to et your appetite going:
+        to get your appetite going:
     <ul>
-        <li><a href="https://health.clevelandclinic.org/beef-liver-benefits">Is Beef Liver Good For You?</a></li>
-        <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8936507/">Priority Micronurtirent Density in Foods</a>
+        <li><a href="https://health.clevelandclinic.org/beef-liver-benefits" target="_blank" rel="noreferrer">Is Beef
+                Liver Good For You?</a></li>
+        <li><a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8936507/" target="_blank" rel="noreferrer">Priority
+                Micronurtirent Density in Foods</a>
         </li>
     </ul>
 
@@ -92,7 +95,8 @@
     </ol>
     <h2>Recipe Credit</h2>
     <p>Though this recipe has not been modifiied, the original recipe posting can be found <a
-            href="https://creativeinmykitchen.com/beef-liver-pate-with-fresh-herbs/">here</a>.</p>
+            href="https://creativeinmykitchen.com/beef-liver-pate-with-fresh-herbs/" target="_blank"
+            rel="noreferrer">here</a>.</p>
 </body>
 
 </html>
