Change order of recipe index, add description

--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 
 <body>
     <h1>Odin Recipes</h1>
+    <p>Listed from least to most difficult.</p>
     <ul>
         <li><a href="./recipes/pesto.html">Proper Pesto</a></li>
-        <li><a href="./recipes/tomkhagai.html">Tom Kha Gai</a></li>
         <li><a href="./recipes/pate.html">Pâté</a></li>
+        <li><a href="./recipes/tomkhagai.html">Tom Kha Gai</a></li>
+
     </ul>
 </body>
 
